syntax = "proto2";

package stremio.core.models;

option java_package = "com.stremio.core.models";

import "stremio/core/models/catalogs_with_extra.proto";
import "stremio/core/types/addon.proto";

message CatalogWithFilters {
  optional Selected selected = 1;
  required Selectable selectable = 2;
  required Catalog catalog = 3;

  message Selected {
    required stremio.core.types.ResourceRequest request = 1;
  }
  message Selectable {
    repeated SelectableType types = 1;
    repeated SelectableCatalog catalogs = 2;
    repeated SelectableExtra extra = 3;
    optional SelectablePage next_page = 4;
  }

  message SelectableType {
    required string type = 1;
    required bool selected = 2;
    required stremio.core.types.ResourceRequest request = 3;
  }

  message SelectableCatalog {
    required string name = 1;
    required bool selected = 2;
    required stremio.core.types.ResourceRequest request = 3;
  }

  message SelectableExtra {
    required string name = 1;
    required bool is_required = 2;
    repeated SelectableExtraOption options = 3;
  }

  message SelectableExtraOption {
    optional string value = 1;
    required bool selected = 2;
    required stremio.core.types.ResourceRequest request = 3;
  }

  message SelectablePage {
    required stremio.core.types.ResourceRequest request = 1;
  }
}